// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Link /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem;
  font-size: 1.3rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #000;
  text-decoration: none;
}

<a
    class="c0"
    data-discover="true"
    font-size="1.3rem"
    href="/"
  />
</DocumentFragment>
`;

exports[`<Link /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem;
  font-size: 1.3rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #fff;
  text-decoration: none;
}

<a
    class="c0"
    data-discover="true"
    font-size="1.3rem"
    href="/"
  />
</DocumentFragment>
`;

exports[`<LinkA /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  font-size: 1.2rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

<a
    class="c0"
  />
</DocumentFragment>
`;

exports[`<LinkA /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  font-size: 1.2rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

<a
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <HeaderLink /> 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem;
  font-size: 1.3rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #000;
  text-decoration: none;
}

.c1 {
  margin: 0.5rem;
  font-weight: 700;
  font-size: 2rem;
}

<a
    class="c0 c1"
    data-discover="true"
    font-size="1.3rem"
    href="/"
  />
</DocumentFragment>
`;
